<resources>
    <string name="app_name">EcoHuerto</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="text_button_login">Sign In</string>
    <string name="textFaq">FAQ</string>
    <string name="textAbout">About Us</string>
    <string name="textHuerto">EcoHuerto</string>
    <string name="textForgotPassword">Did you forget your password? Click Here</string>
    <string name="hint_first_name">Nombre</string>
    <string name="hint_last_name">Apellidos</string>
    <string name="hint_repeat_password">Repita la contraseña</string>
    <string name="hint_phone">Teléfono</string>
    <string name="button_register_user">Registrarse</string>
    <string name="checkbox_accept_terms">Acepto los términos y condiciones</string>
    <string name="button_reset_fields">Reset campos</string>
    <string name="action_settings">Ajustes</string>
    <string name="title_activity_huerto">HuertoActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="nav_header_title">Titulo</string>
    <string name="nav_header_subtitle">Subtitulo</string>
    <string name="nav_header_desc">Descripción</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
<<<<<<< HEAD
=======

>>>>>>> 3000616b5e46614155f0174f02e1c85e6074037b
    <string name="title_huerto_list">Huertos</string>
    <string name="title_huerto_detail">Huerto Detail</string>


    <!-- Preferencias -->
    <string name="sharedpreferences_filename">login</string>
    <string name="jwt_key">JWT_KEY</string>
</resources>
