<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo4"
        tools:ignore="VectorDrawableCompat" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:cardBackgroundColor="@android:color/background_light"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
<<<<<<< HEAD:EcoHuerto/app/src/main/res/layout/activity_registro.xml
                android:id="@+id/etPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textColorHint="@android:color/black"
                app:layout_constraintBottom_toTopOf="@+id/etRepeatPassword"
                app:layout_constraintEnd_toEndOf="@+id/etEmail"
                app:layout_constraintStart_toStartOf="@+id/etEmail"
                app:layout_constraintTop_toBottomOf="@+id/etEmail" />

            <EditText
                android:id="@+id/etRepeatPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/hint_repeat_password"
                android:inputType="textPassword"
                android:textColorHint="@android:color/black"
                app:layout_constraintBottom_toTopOf="@+id/etPhone"
                app:layout_constraintEnd_toEndOf="@+id/etPassword"
                app:layout_constraintStart_toStartOf="@+id/etPassword"
                app:layout_constraintTop_toBottomOf="@+id/etPassword" />

            <EditText
=======
>>>>>>> 34a7119a6fae3de7cb1c53d2ec3ce31dd097e10b:Plantillas/app/src/main/res/layout/activity_registro.xml
                android:id="@+id/etName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
<<<<<<< HEAD:EcoHuerto/app/src/main/res/layout/activity_registro.xml
                android:layout_marginEnd="14dp"
=======
                android:layout_marginEnd="16dp"
>>>>>>> 34a7119a6fae3de7cb1c53d2ec3ce31dd097e10b:Plantillas/app/src/main/res/layout/activity_registro.xml
                android:ems="10"
                android:hint="@string/hint_first_name"
                android:inputType="textPersonName"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                android:textStyle="bold"
<<<<<<< HEAD:EcoHuerto/app/src/main/res/layout/activity_registro.xml
                app:layout_constraintBottom_toTopOf="@+id/etLastName"
=======
>>>>>>> 34a7119a6fae3de7cb1c53d2ec3ce31dd097e10b:Plantillas/app/src/main/res/layout/activity_registro.xml
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etLastName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/hint_last_name"
                android:inputType="textPersonName"
                android:textColorHint="@android:color/black"
                app:layout_constraintEnd_toEndOf="@+id/etName"
                app:layout_constraintStart_toStartOf="@+id/etName"
                app:layout_constraintTop_toBottomOf="@+id/etName" />

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/hint_phone"
                android:inputType="phone"
                android:textColorHint="@android:color/black"
                app:layout_constraintEnd_toEndOf="@+id/etLastName"
                app:layout_constraintStart_toStartOf="@+id/etLastName"
                app:layout_constraintTop_toBottomOf="@+id/etLastName" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textColorHint="@android:color/black"
                app:layout_constraintEnd_toEndOf="@+id/etLastName"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/etLastName"
                app:layout_constraintTop_toBottomOf="@+id/etPhone" />

<<<<<<< HEAD:EcoHuerto/app/src/main/res/layout/activity_registro.xml
=======
            <EditText
                android:id="@+id/etPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textColorHint="@android:color/black"
                app:layout_constraintEnd_toEndOf="@+id/etEmail"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/etEmail"
                app:layout_constraintTop_toBottomOf="@+id/etEmail" />

            <EditText
                android:id="@+id/etRepeatPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/hint_repeat_password"
                android:inputType="textPassword"
                android:textColorHint="@android:color/black"
                app:layout_constraintEnd_toEndOf="@+id/etPassword"
                app:layout_constraintStart_toStartOf="@+id/etPassword"
                app:layout_constraintTop_toBottomOf="@+id/etPassword" />

            <CheckBox
                android:id="@+id/cbTerms"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_marginTop="8dp"
                android:checked="false"
                android:text="@string/checkbox_accept_terms"
                android:textAlignment="textStart"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/etRepeatPassword"
                app:layout_constraintStart_toStartOf="@+id/etRepeatPassword"
                app:layout_constraintTop_toBottomOf="@+id/etRepeatPassword" />

>>>>>>> 34a7119a6fae3de7cb1c53d2ec3ce31dd097e10b:Plantillas/app/src/main/res/layout/activity_registro.xml
            <Button
                android:id="@+id/btnRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
<<<<<<< HEAD:EcoHuerto/app/src/main/res/layout/activity_registro.xml
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
=======
                android:layout_marginTop="8dp"
>>>>>>> 34a7119a6fae3de7cb1c53d2ec3ce31dd097e10b:Plantillas/app/src/main/res/layout/activity_registro.xml
                android:backgroundTint="#63e289"
                android:text="@string/button_register_user"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
<<<<<<< HEAD:EcoHuerto/app/src/main/res/layout/activity_registro.xml
                app:layout_constraintBottom_toBottomOf="parent"
=======
>>>>>>> 34a7119a6fae3de7cb1c53d2ec3ce31dd097e10b:Plantillas/app/src/main/res/layout/activity_registro.xml
                app:layout_constraintEnd_toEndOf="@+id/cbTerms"
                app:layout_constraintStart_toStartOf="@+id/cbTerms"
                app:layout_constraintTop_toBottomOf="@+id/cbTerms" />

<<<<<<< HEAD:EcoHuerto/app/src/main/res/layout/activity_registro.xml
            <CheckBox
                android:id="@+id/cbTerms"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_marginTop="8dp"
                android:checked="false"
                android:text="@string/checkbox_accept_terms"
                android:textAlignment="textStart"
                android:textColorHint="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/btnRegister"
                app:layout_constraintEnd_toEndOf="@+id/etPhone"
                app:layout_constraintStart_toStartOf="@+id/etPhone"
                app:layout_constraintTop_toBottomOf="@+id/etPhone" />

=======
>>>>>>> 34a7119a6fae3de7cb1c53d2ec3ce31dd097e10b:Plantillas/app/src/main/res/layout/activity_registro.xml
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
<<<<<<< HEAD:EcoHuerto/app/src/main/res/layout/activity_registro.xml
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
=======
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
>>>>>>> 34a7119a6fae3de7cb1c53d2ec3ce31dd097e10b:Plantillas/app/src/main/res/layout/activity_registro.xml
        android:text="About Us"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintEnd_toStartOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
<<<<<<< HEAD:EcoHuerto/app/src/main/res/layout/activity_registro.xml
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
=======
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
>>>>>>> 34a7119a6fae3de7cb1c53d2ec3ce31dd097e10b:Plantillas/app/src/main/res/layout/activity_registro.xml
        android:text="FAQ"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>
