<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="-1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="#63e289"
                android:text="@string/text_button_login"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
                app:layout_constraintStart_toStartOf="@+id/editTextPassword"
                app:layout_constraintTop_toBottomOf="@+id/text_signup" />

            <TextView
                android:id="@+id/text_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="Sign Up"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
                app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="#000000"
                android:ems="10"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:singleLine="false"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="0dp"
                android:layout_height="53dp"
                android:layout_marginTop="24dp"
                android:backgroundTint="#000000"
                android:ems="10"
                android:hint="Password"
                android:inputType="textPassword"
                android:textColor="@color/cardview_dark_background"
                android:textStyle="bold"
                android:typeface="normal"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
                app:layout_constraintStart_toStartOf="@+id/editTextEmail"
                app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

            <Button
                android:id="@+id/buttonGoogle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="#63e289"
                android:drawableLeft="@drawable/ic_google_logo2"
                android:padding="12dp"
                android:text="Sign In With Google"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/buttonLogin"
                app:layout_constraintStart_toStartOf="@+id/buttonLogin"
                app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

            <TextView
                android:id="@+id/textForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/textForgotPassword"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/buttonGoogle"
                app:layout_constraintStart_toStartOf="@+id/buttonGoogle"
                app:layout_constraintTop_toBottomOf="@+id/buttonGoogle" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/textFaq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/textFaq"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textAboutUs"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_marginEnd="32dp"
        android:text="@string/textAbout"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textFaq"
        app:layout_constraintTop_toTopOf="@+id/textFaq" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="192dp"
        android:layout_height="130dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo45"
        android:contentDescription="TODO" />

</android.support.constraint.ConstraintLayout>
